--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ body {
     padding: 20px;
     font-size: 24px;
     font-weight: bold;
+    flex-shrink: 0;
 }
 
 ul {
@@ -92,4 +93,33 @@ button {
     border: 0px;
     color: #F9FAF8;
     font-weight: bold;    
+}
+
+img {
+    height: 150px;
+    width: 150px;
+    border-radius: 8px;
+    border: #3882F7 3px solid;
+}
+
+.second-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+.gallery {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.photo {
+    max-width: 150px;
+}
+
+h2 {
+    color: #1F2937;
+    font-size: 36px;
 }
