--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /*height: 100vh;*/
 }
 
 .header,
@@ -89,7 +89,7 @@ p {
 button {
     background-color: #3882F7;
     border-radius: 5px;
-    padding: 5px 12px;
+    padding: 5px 16px;
     border: 0px;
     color: #F9FAF8;
     font-weight: bold;    
@@ -156,3 +156,43 @@ h2 {
     font-weight: bold;
 }
 
+
+.fourth-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 150px;
+    
+
+}
+
+.blue-box {
+    background-color: #3882F7;
+    padding: 35px 130px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 50px;
+    min-width: 400px;
+}
+
+.fourth-container button {
+    border: #F9FAF8 solid 2px;
+    flex-shrink: 0;
+}
+
+.box-top-text,
+.box-bottom-text {
+    color: #F9FAF8;
+    
+}
+
+.box-top-text{
+    font-weight: bold;
+    margin-bottom: 3px;
+}
+
+button:hover {
+    background-color: #93aee4;
+}
