--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    /*height: 100vh;*/
+    height: 100vh;
 }
 
 .header,
@@ -195,4 +195,8 @@ h2 {
 
 button:hover {
     background-color: #93aee4;
+}
+
+.footer {
+    padding: 31px;
 }
